--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -9,7 +9,7 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
 
     steps:
       - name: Checkout
@@ -71,3 +71,37 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/tailscale-derp:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/tailscale-derp:${{ steps.release.outputs.version }}
+
+      - name: Update README build status
+        if: steps.exists.outputs.exists == 'false'
+        run: |
+          python - <<'PY'
+          from datetime import datetime, timezone
+          from pathlib import Path
+          import re
+
+          readme = Path("README.md")
+          text = readme.read_text(encoding="utf-8")
+
+          version = "${{ steps.release.outputs.version }}"
+          stamp = datetime.now(timezone.utc).strftime("%Y-%m-%d %H:%M UTC")
+
+          text = re.sub(r"- 最新同步版本：`[^`]*`", f"- 最新同步版本：`{version}`", text)
+          text = re.sub(r"- 最后自动更新时间（UTC）：`[^`]*`", f"- 最后自动更新时间（UTC）：`{stamp}`", text)
+
+          readme.write_text(text, encoding="utf-8")
+          PY
+
+      - name: Commit README status update
+        if: steps.exists.outputs.exists == 'false'
+        run: |
+          if git diff --quiet README.md; then
+            echo "README unchanged, skip commit."
+            exit 0
+          fi
+
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "docs: update synced version to ${{ steps.release.outputs.version }}"
+          git push
