--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -17,12 +17,21 @@ jobs:
 
       - name: Resolve latest tailscale release
         id: release
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           VERSION=$(python - <<'PY'
-          import json, urllib.request
+          import json
+          import os
+          import urllib.request
           req = urllib.request.Request(
               "https://api.github.com/repos/tailscale/tailscale/releases/latest",
-              headers={"Accept": "application/vnd.github+json"},
+              headers={
+                  "Accept": "application/vnd.github+json",
+                  "Authorization": f"Bearer {os.environ['GH_TOKEN']}",
+                  "X-GitHub-Api-Version": "2022-11-28",
+                  "User-Agent": "deepfal-tailscale-derp-workflow",
+              },
           )
           with urllib.request.urlopen(req, timeout=30) as resp:
               data = json.load(resp)
